// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form TextInput shallow a 2 TextInput 1`] = `
<WithStyles(FormControl)>
  <pure(TextInput)
    doc={
      Object {
        "test": "Type Sample",
        "test2": "Type Sample",
      }
    }
    error={false}
    fieldName="test"
    key=".0"
    label="test"
    setDoc={[Function]}
    value="Type Sample"
  />
  <pure(TextInput)
    doc={
      Object {
        "test": "Type Sample",
        "test2": "Type Sample",
      }
    }
    error={false}
    fieldName="test2"
    key=".1"
    label="test2"
    setDoc={[Function]}
    value="Type Sample"
  />
  <WithStyles(Button)
    onClick={[Function]}
  >
    Submit
  </WithStyles(Button)>
</WithStyles(FormControl)>
`;

exports[`Form TextInput shallow a TextInput 1`] = `
<WithStyles(FormControl)>
  <pure(TextInput)
    doc={
      Object {
        "test": "Type Sample",
      }
    }
    error={false}
    fieldName="test"
    key=".0"
    label="test"
    setDoc={[Function]}
    value="Type Sample"
  />
  <WithStyles(Button)
    onClick={[Function]}
  >
    Submit
  </WithStyles(Button)>
</WithStyles(FormControl)>
`;
